# playground-agent

./: .env.example  .gitignore  README.md  pyproject.toml  streamlit_app.py
benchmark_agent/: __init__.py  __main__.py  cli.py  config.py  grading.py  graph.py  prompt.py  state.py  tools.py
benchmark_agent/examples/: q-add-01.json  q-add-02-all-tools copy.json  q-wrong-03-all-tools.json
insurance_agent/: __init__.py  __main__.py  cli.py  config.py  graph.py  prompt_loader.py  state.py  streaming.py
insurance_agent/nodes/: __init__.py  chat.py
prompts/: insurance-consultation-agent.ko.md  tool-count-accuracy-benchmark-agent.ko.md
